--- a/src/components/coinsBlock/mobile/coinsStyle.css
+++ b/src/components/coinsBlock/mobile/coinsStyle.css
@@ -33,7 +33,7 @@
 }
 
 .address {
-  width: 400px;
+  max-width: 400px;
   padding-bottom: 20px;
   padding-left: 10px;
   border-bottom: 1px solid white;
@@ -69,8 +69,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #4922B3;
-  width: 400px;
+  background: #4922b3;
+  max-width: 400px;
   height: 41px;
   margin-top: 20px;
 }
+
